<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.may.base.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/ghost_white"
        android:orientation="vertical">

        <com.may.base.view.pageIndicator.BannerLayout
            android:id="@+id/bannerLayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_200">

            <com.may.base.view.pageIndicator.SmallRectPageIndicator
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginBottom="@dimen/dp_10" />
        </com.may.base.view.pageIndicator.BannerLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_marginRight="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_20"
            android:background="@drawable/shape_solid_round_corner_six_radius_white"
            android:elevation="@dimen/dp_3"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dp_16"
                android:text="@string/loan_amount"
                android:textColor="@color/gray_66"
                android:textSize="@dimen/sp_14" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_11">

                <EditText
                    android:inputType="number|numberDecimal"
                    android:id="@+id/tv_loan_amount"
                    android:layout_width="@dimen/dp_164"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/shape_solid_round_corner_four_radius_white_ef"
                    android:minHeight="0dp"
                    android:paddingBottom="@dimen/dp_5"
                    android:paddingLeft="@dimen/dp_18"
                    android:paddingRight="@dimen/dp_13"
                    android:paddingTop="@dimen/dp_5"
                    android:singleLine="true"
                    android:text="100.00"
                    android:textColor="@color/main_color"
                    android:textSize="@dimen/dp_36" />


                <TextView
                    android:id="@+id/tv_loan_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/dp_5"
                    android:layout_toRightOf="@id/tv_loan_amount"
                    android:paddingLeft="@dimen/dp_5"
                    android:text="CNY"
                    android:textColor="@color/gray_66"
                    android:textSize="@dimen/sp_14" />

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dp_30"
                android:text="@string/loan_term"
                android:textColor="@color/gray_66"
                android:textSize="@dimen/sp_14" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dp_20"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_thirty_days"
                    style="@style/loanTermTypeStyle"
                    android:checked="true"
                    android:text="30天" />

                <RadioButton
                    android:id="@+id/rb_ninety_days"
                    style="@style/loanTermTypeStyle"
                    android:layout_marginLeft="@dimen/dp_8"
                    android:text="90天" />

                <RadioButton
                    android:id="@+id/rb_one_hundred_and_eighty_days"
                    style="@style/loanTermTypeStyle"
                    android:layout_marginLeft="@dimen/dp_8"
                    android:text="180天" />

                <RadioButton
                    android:id="@+id/rb_three_hundred_and_sixty_days"
                    style="@style/loanTermTypeStyle"
                    android:layout_marginLeft="@dimen/dp_8"
                    android:text="360天" />

            </RadioGroup>

            <Button
                android:id="@+id/bt_apply_now"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_40"
                android:layout_marginRight="@dimen/dp_40"
                android:layout_marginTop="@dimen/dp_46"
                android:background="@drawable/shape_solid_half_circle_mian"
                android:text="@string/apply_now"
                android:textColor="@color/white" />


            <TextView
                android:id="@+id/tv_repay_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_20"
                android:text="@string/amount_payable_at_maturity" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_marginRight="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_20"
            android:background="@drawable/shape_solid_round_corner_six_radius_white"
            android:elevation="@dimen/dp_3"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dp_16"
                android:text="@string/contact_customer_service"
                android:textColor="@color/gray_66"
                android:textSize="@dimen/dp_14" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/dp_19"
                android:layout_marginTop="@dimen/dp_15"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_share_facebook" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_20"
                    android:src="@mipmap/ic_share_facebook" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_20"
                    android:src="@mipmap/ic_share_facebook" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_20"
                    android:src="@mipmap/ic_share_facebook" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_20"
                    android:src="@mipmap/ic_share_facebook" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_20"
                    android:src="@mipmap/ic_share_facebook" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/dp_16"
                android:paddingLeft="@dimen/dp_15"
                android:paddingRight="@dimen/dp_15"
                android:paddingTop="@dimen/dp_17"
                android:text="@string/common_question"
                android:textColor="@color/main_color"
                android:textSize="@dimen/sp_12" />

            <View
                android:layout_width="@dimen/dp_0.5"
                android:layout_height="@dimen/dp_15"
                android:layout_gravity="center_vertical"
                android:background="@color/main_color" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/dp_16"
                android:paddingLeft="@dimen/dp_15"
                android:paddingRight="@dimen/dp_15"
                android:paddingTop="@dimen/dp_17"
                android:text="联系我们"
                android:textColor="@color/main_color"
                android:textSize="@dimen/sp_12" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>