<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/ghost_white">

        <com.may.base.view.pageIndicator.BannerLayout
            android:id="@+id/bannerLayout"
            android:layout_width="@dimen/dp_0"
            android:layout_height="@dimen/dp_0"
            app:layout_constraintDimensionRatio="H,3:1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.may.base.view.pageIndicator.SmallRectPageIndicator
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginBottom="@dimen/dp_10" />
        </com.may.base.view.pageIndicator.BannerLayout>


        <android.support.constraint.ConstraintLayout
            android:id="@+id/cl_loan_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_marginRight="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_15"
            android:background="@color/white"
            android:elevation="4dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bannerLayout">

            <TextView
                android:id="@+id/tv_loan_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_16"
                android:text="@string/loan_amount"
                android:textColor="@color/gray_66"
                android:textSize="@dimen/sp_14"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/et_loan_amount"
                android:layout_width="@dimen/dp_164"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_11"
                android:background="@drawable/shape_solid_round_corner_four_radius_white_ef"
                android:inputType="number|numberDecimal"
                android:minHeight="0dp"
                android:paddingBottom="@dimen/dp_5"
                android:paddingLeft="@dimen/dp_18"
                android:paddingRight="@dimen/dp_13"
                android:paddingTop="@dimen/dp_5"
                android:singleLine="true"
                android:text="100.00"
                android:textColor="@color/main_color"
                android:textSize="@dimen/dp_36"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_loan_amount" />

            <TextView
                android:id="@+id/tv_loan_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/dp_5"
                android:paddingLeft="@dimen/dp_5"
                android:text="CNY"
                android:textColor="@color/gray_66"
                android:textSize="@dimen/sp_14"
                app:layout_constraintBottom_toBottomOf="@id/et_loan_amount"
                app:layout_constraintLeft_toRightOf="@id/et_loan_amount"
                app:layout_constraintTop_toTopOf="@id/et_loan_amount" />

            <TextView
                android:id="@+id/tv_loan_term"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_30"
                android:text="@string/loan_term"
                android:textColor="@color/gray_66"
                android:textSize="@dimen/sp_14"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_loan_amount" />

            <RadioGroup
                android:id="@+id/rg_loan_term"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_20"
                android:orientation="horizontal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_loan_term">

                <RadioButton
                    android:id="@+id/rb_thirty_days"
                    style="@style/loanTermTypeStyle"
                    android:checked="true"
                    android:text="30天" />

                <RadioButton
                    android:id="@+id/rb_ninety_days"
                    style="@style/loanTermTypeStyle"
                    android:layout_marginLeft="@dimen/dp_8"
                    android:text="90天" />

                <RadioButton
                    android:id="@+id/rb_one_hundred_and_eighty_days"
                    style="@style/loanTermTypeStyle"
                    android:layout_marginLeft="@dimen/dp_8"
                    android:text="180天" />

                <RadioButton
                    android:id="@+id/rb_three_hundred_and_sixty_days"
                    style="@style/loanTermTypeStyle"
                    android:layout_marginLeft="@dimen/dp_8"
                    android:text="360天" />

            </RadioGroup>

            <Button
                android:id="@+id/bt_apply_now"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_40"
                android:layout_marginRight="@dimen/dp_40"
                android:layout_marginTop="@dimen/dp_46"
                android:background="@drawable/shape_solid_half_circle_mian"
                android:text="@string/apply_now"
                android:textColor="@color/white"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rg_loan_term" />

            <TextView
                android:id="@+id/tv_repay_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_20"
                android:text="@string/amount_payable_at_maturity"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/bt_apply_now" />
        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/cl_share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_marginRight="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_20"
            android:background="@drawable/shape_solid_round_corner_six_radius_white"
            android:elevation="@dimen/dp_3"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cl_loan_info">

            <TextView
                android:id="@+id/tv_contact_customer_service"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_16"
                android:text="@string/contact_customer_service"
                android:textColor="@color/gray_66"
                android:textSize="@dimen/dp_14"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <ImageView
                android:id="@+id/iv_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_19"
                android:layout_marginLeft="@dimen/dp_25"
                android:layout_marginTop="@dimen/dp_15"
                android:src="@mipmap/ic_share_facebook"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/iv_two"
                app:layout_constraintTop_toBottomOf="@id/tv_contact_customer_service" />

            <ImageView
                android:id="@+id/iv_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_share_facebook"
                app:layout_constraintLeft_toRightOf="@id/iv_one"
                app:layout_constraintRight_toLeftOf="@+id/iv_three"
                app:layout_constraintTop_toTopOf="@id/iv_one" />

            <ImageView
                android:id="@+id/iv_three"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_share_facebook"
                app:layout_constraintLeft_toRightOf="@id/iv_two"
                app:layout_constraintRight_toLeftOf="@+id/iv_four"
                app:layout_constraintTop_toTopOf="@id/iv_two" />

            <ImageView
                android:id="@+id/iv_four"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_share_facebook"
                app:layout_constraintLeft_toRightOf="@id/iv_three"
                app:layout_constraintRight_toLeftOf="@+id/iv_five"
                app:layout_constraintTop_toTopOf="@id/iv_three" />

            <ImageView
                android:id="@+id/iv_five"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_share_facebook"
                app:layout_constraintLeft_toRightOf="@id/iv_four"
                app:layout_constraintRight_toLeftOf="@+id/iv_six"
                app:layout_constraintTop_toTopOf="@id/iv_four" />

            <ImageView
                android:id="@+id/iv_six"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/dp_25"
                android:src="@mipmap/ic_share_facebook"
                app:layout_constraintLeft_toRightOf="@id/iv_five"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/iv_five" />
        </android.support.constraint.ConstraintLayout>

        <TextView
            android:id="@+id/tv_common_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/dp_16"
            android:paddingLeft="@dimen/dp_15"
            android:paddingRight="@dimen/dp_15"
            android:paddingTop="@dimen/dp_17"
            android:text="@string/common_question"
            android:textColor="@color/main_color"
            android:textSize="@dimen/sp_12"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/view_line"
            app:layout_constraintTop_toBottomOf="@id/cl_share" />

        <View
            android:id="@+id/view_line"
            android:layout_width="@dimen/dp_0.5"
            android:layout_height="@dimen/dp_15"
            android:background="@color/main_color"
            app:layout_constraintBottom_toBottomOf="@id/tv_common_question"
            app:layout_constraintLeft_toRightOf="@id/tv_common_question"
            app:layout_constraintRight_toLeftOf="@+id/tv_contact_us"
            app:layout_constraintTop_toTopOf="@id/tv_common_question" />

        <TextView
            android:id="@+id/tv_contact_us"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/dp_16"
            android:paddingLeft="@dimen/dp_15"
            android:paddingRight="@dimen/dp_15"
            android:paddingTop="@dimen/dp_17"
            android:text="@string/contac_us"
            android:textColor="@color/main_color"
            android:textSize="@dimen/sp_12"
            app:layout_constraintLeft_toRightOf="@id/view_line"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_common_question" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>